tests/baselines/reference/jsdocDisallowedInTypescript.errors.txt
tests/cases/conformance/jsdoc/jsdocDisallowedInTypescript.ts(2,15): error TS8020: JSDoc types can only be used inside documentation comments.
tests/cases/conformance/jsdoc/jsdocDisallowedInTypescript.ts(4,32): error TS8020: JSDoc types can only be used inside documentation comments.
tests/cases/conformance/jsdoc/jsdocDisallowedInTypescript.ts(11,18): error TS2554: Expected 1 arguments, but got 2.
tests/cases/conformance/jsdoc/jsdocDisallowedInTypescript.ts(18,5): error TS2322: Type 'undefined' is not assignable to type 'number | null'.


==== tests/cases/conformance/jsdoc/jsdocDisallowedInTypescript.ts (4 errors) ====
    // grammar error from checker
    var ara: Array.<number> = [1,2,3];
                  ~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
    
    function f(x: ?number, y: Array.<number>) {
                                   ~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
        return x ? x + y[1] : y[0];
    }
    function hof(ctor: function(new: number, string)) {
        return new ctor('hi');
    }
    function hof2(f: function(this: number, string): string) {
        return f(12, 'hullo');
                     ~~~~~~~
!!! error TS2554: Expected 1 arguments, but got 2.
    }
    var whatevs: * = 1001;
    var ques: ? = 'what';
    var g: function(number, number): number = (n,m) => n + m;
    var most: !string = 'definite';
    var postfixdef: number! = 101;
    var postfixopt: number? = undefined;
        ~~~~~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'number | null'.
    
    var nns: Array<?number>;
    var dns: Array<!number>;
    var anys: Array<*>;
    
    